added tests for removeFromBasket